added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -55,7 +55,7 @@ ul.inside {
 
 <body>
 <div class="big">
-<h2 style="color:gray">Select server...</h2>
+<h2 style="color:dimgrey">Select server...</h2>
 
 {% for k,i in servers %}
  <div class="panel">
