added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -30,7 +30,7 @@ button.accordion.active, button.accordion:hover {
 
 .panel {
     background-color: white;
-    display: inline-block;
+    display: inline-block;}
 
 ul.inside {
     display: none;
