--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -237,8 +237,10 @@ function run() {
             $('span').css({color:'black',opacity: 1});
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
             $("#Run,#timer,#time_label,#timercheckbox").fadeOut("slow");
-            $('#errors').fadeIn("slow").text('Connection timeout: '+json.errors)
-            console.log('Connection timeout: '+JSON.stringify(json.errors))
+            if (json.errors.length >null) {
+                $('#errors').fadeIn("slow").text('Connection timeout: ' + json.errors)
+                console.log('Connection timeout: ' + JSON.stringify(json.errors))
+            }
             console.log('Success')
         },
 
