added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -258,6 +258,7 @@ function run() {
                 if (data.length > null){
                    for(var i=0, n=data.length;i<n;i++) {
                        console.log('SSID_STATUS='+ssid_status)
+                       console.log(data[data.length-1]+' changed')
                        if (!ssid_status.includes(data[i])) {
                        $( "span."+data[i] ).html(data[i]+"<span style='color:blue'>  ok  </span>").fadeIn("slow");
                        ssid_status.push(data[i])
