--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -283,7 +283,7 @@ function run() {
                        }
                        //else {console.log('Status already set')}
                        }}
-                //else {console.log('No errors')}
+                else {console.log('No errors')}
             });
  } , 1000)
 
