--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -192,7 +192,7 @@ ssid_error=[]
         if (up_new.length === 0 && down_new.length === 0) {
             $('#Run').css('display','none')}
         if (up_new.length==0) {
-                $('#timer,#time_label').css('display','none');
+                $('#timer,#time_label,#timercheckbox').css('display','none');
             }
 
         }
