added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -248,8 +248,10 @@ function run() {
             $("#Run,#timer,#time_label,#timercheckbox").fadeOut("slow");
             if (json.errors.length >null) {
                 $('#errors').fadeIn("slow").html('Connection timeout: ' + json.errors+'<br>ask NOC for details.')
+                console.log('Fading out after 5 seconds')
+                $('#errors').fadeOut(5000)
                 console.log('Connection timeout: ' + JSON.stringify(json.errors))
-                setTimeout(location.reload(), 5000);
+                //setTimeout(location.reload(), 5000);
             }
         },
 
