--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -247,16 +247,8 @@ function run() {
             $('span').css({color:'black',opacity: 1});
             $("#Run,#timer,#time_label,#timercheckbox").fadeOut("slow");
             if (json.errors.length >null) {
-                $('#errors').fadeIn("slow").html('Connection timeout: ' + json.errors+'<br>ask NOC for details.')
-                var time = new Date();
-                console.log(time.getHours() + ":" + time.getMinutes() + ":" + time.getSeconds());
-                console.log('Fading out after 5 seconds')
-                a=function(){$('#errors').fadeOut("slow")}
+                $('#errors').fadeIn("slow").html('Connection timeout: ' + json.errors+'<br>ask NOC for details.').delay(5000).fadeOut("slow")
                 console.log('Connection timeout: ' + JSON.stringify(json.errors))
-                //setTimeout(location.reload(), 5000);
-                setTimeout(a(),5000)
-                console.log(time.getHours() + ":" + time.getMinutes() + ":" + time.getSeconds());
-
             }
         },
 
