added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -231,8 +231,8 @@ function run() {
                 $( "span."+ssid_error[i] ).html(ssid_error[i]);
             }
             timer=1800
-            console.log(ssid_error.length, ssid_error)
-                if (ssid_error.length === null) {
+                console.log(ssid_error.length === 0)
+                if (ssid_error.length === 0) {
                 $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
                 console.log('Success')
             }
