added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -233,7 +233,7 @@ function run() {
             timer=1800
             if (ssid_error.length === 0) {
             //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-            ("#success").html('<span style="color:green; font-size: 16px;">Success</span>').fadeIn("slow").delay( 800 ).fadeOut("slow");
+            $("#success").html('<span style="color:green; font-size: 16px;">Success</span>').fadeIn("slow").delay( 800 ).fadeOut("slow");
             console.log('Success')
             }
             ssid_status=[]
