--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -84,7 +84,7 @@ ul.inside {
 <input style="margin-left:auto;margin-right:auto;width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;text-align: center;" type="button" id="Run" onClick="run()" value="Run"/>
 
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none;">
-<div id="success" style="display: none;"></div>
+<div id="success" style="display: none;color:red;"></div>
 <span style="display: none;color: red;font-size: 16px;" id="no_one_chosen">Please, choose at least one ssid</span>
 <div id="errors" style="display: none;"></div>
 
@@ -233,7 +233,7 @@ function run() {
             timer=1800
             if (ssid_error.length === 0) {
             //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-            $("#success").fadeIn("slow").html('<span style="color:green; font-size: 16px;">Success</span>').delay( 2000 ).fadeOut("slow");
+            $("#success").fadeIn("slow").html('<span style="color:green; font-size: 26px;">Success!!!</span>').delay( 2000 ).fadeOut("slow");
             console.log('Success')
             }
             ssid_status=[]
