added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -84,7 +84,7 @@ ul.inside {
 <input style="margin-left:auto;margin-right:auto;width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;text-align: center;" type="button" id="Run" onClick="run()" value="Run"/>
 
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none;">
-<div id="success" style="display: none;color:red;font-size: 16px;">Success</div>
+<div id="success" style="display: none;color:green;font-size: 20px;font-weight: bold ">Success</div>
 <span style="display: none;color: red;font-size: 16px;" id="no_one_chosen">Please, choose at least one ssid</span>
 <div id="errors" style="display: none;"></div>
 
