--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -80,7 +80,7 @@ ul.inside {
 <div class="footer">
 <input type="checkbox" name="Timer" style= "margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px; " id="timercheckbox" onclick="update_timer(this)">
 <label style="margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px;" id="time_label" for="timercheckbox">Timer (in minutes):</label>
-<input style="width:120px;margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px;" type="text" id="timer" placeholder="default 30 minutes" name="timer" pattern="[0-9]{1,3}" required>
+<input style="width:120px;margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px;" type="text" id="timer" placeholder="default 30 minutes" name="timer" maxlength="3" required>
 <input style="margin-left:auto;margin-right:auto;width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;text-align: center;" type="button" id="Run" onClick="run()" value="Run"/>
 
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none;">
@@ -135,8 +135,17 @@ $('span').mouseleave(function(){
     })});
 
 timer=30
-$( "#timer" ).keyup(function() {
-    timer = $( this ).val()})
+
+$('#timer').keyup(function () {
+    if (!this.value.match(/[0-9]{1,3} }}/)) {
+        this.value = this.value.replace(/[^0-9]/g, '')
+    else {timer = $( this ).val()}
+
+    }
+});
+
+//$( "#timer" ).keyup(function() {
+//    timer = $( this ).val()})
 
 
 {% autoescape off %}
