--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -138,10 +138,8 @@ timer=30
 
 $('#timer').keyup(function () {
     if (!this.value.match(/[0-9]{1,3} }}/)) {
-        this.value = this.value.replace(/[^0-9]/g, '')
+        this.value = this.value.replace(/[^0-9]/g, '')}
     else {timer = $( this ).val()}
-
-    }
 });
 
 //$( "#timer" ).keyup(function() {
