added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -220,6 +220,7 @@ function run() {
 
 
     console.log("Sending POST by ajax");
+               console.log('Timer='+timer)
             $.ajax({
             url : "ssid_update/",
             type : "POST",
