--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -137,11 +137,12 @@ $('span').mouseleave(function(){
 timer=30
 
 $('#timer').keyup(function () {
-    if (!this.value.match(/[0-9]{1,3} }}/)) {
-        this.value = this.value.replace(/[^0-9]/g, '')}
-    else {
+    if (this.value.match(/[0-9]{1,3} }}/)) {
         timer = $( this ).val()
         console.log(timer)}
+    else {
+        this.value = this.value.replace(/[^0-9]/g, '')
+        }
 });
 
 //$( "#timer" ).keyup(function() {
