--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -138,7 +138,7 @@ timer=30
 
 $('#timer').keyup(function () {
     if (this.value.match(/[0-9]{1,3} }}/)) {
-        timer = $( this ).val()
+        timer = this.value
         console.log(timer)}
     else {
         this.value = this.value.replace(/[^0-9]/g, '')
