--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -142,7 +142,7 @@ function update_timer(timer) {
 timer=30
 
 $('#timer').keyup(function () {
-    if (this.value.match(/[0-9]{1,3} }}/)) {
+    if (this.value.match(/[0-9]{1,3}/)) {
         timer = this.value
         console.log('Timer inside function='+timer)}
     else {
