--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -142,6 +142,13 @@ function update_timer(timer) {
 timer=30
 
 $('#timer').keyup(function () {
+    $('#timer').animate({
+    width: "20px",
+    opacity: 0.4,
+    marginLeft: "0.6in",
+    fontSize: "3em",
+    borderWidth: "2px"
+  }, 500 );
     if (this.value.match(/[0-9]{1,3}/)) {
         timer = this.value
         console.log('Timer inside function='+timer)}
