--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -141,14 +141,18 @@ function update_timer(timer) {
 
 timer=30
 
-$('#timer').keyup(function () {
-    $('#timer').animate({
-    width: "20px",
+$("#timer").click(
+    $(this).animate({
+    width: "25px",
     opacity: 0.4,
-    marginLeft: "0.6in",
-    fontSize: "3em",
-    borderWidth: "2px"
-  }, 500 );
+    //marginLeft: "0.6in",
+    //fontSize: "3em",
+    borderWidth: "1px"
+  }, 500 ))
+
+
+$('#timer').keyup(function () {
+
     if (this.value.match(/[0-9]{1,3}/)) {
         timer = this.value
         console.log('Timer inside function='+timer)}
