added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -142,7 +142,7 @@ function update_timer(timer) {
 timer=30
 
 $("#timer").click(
-    $(this).animate({
+    $("#timer").animate({
     width: "25px",
     opacity: 0.4,
     //marginLeft: "0.6in",
