added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -225,7 +225,7 @@ function run() {
            if (all_new[0] != null) {
            interval=1000
            $("input[name='ssid']" ).attr('disabled', true);
-           $("#Run,#timercheckbox,#time_label").css('display','none') ;
+           $("#Run,#timercheckbox,#time_label,#timer").css('display','none') ;
            $("#loading").css('display','inline-block');
 
 
