added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -86,7 +86,7 @@ ul.inside {
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none;">
 <div id="success" style="display: none;color:green;font-size: 26px; ">Success</div>
 <span style="display: none;color: red;font-size: 16px;" id="no_one_chosen">Please, choose at least one ssid</span>
-<div id="errors" style="display: none;"></div>
+<div id="errors" style="display: none;color: red;font-size: 18px"></div>
 
 </div>
 
