--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -187,8 +187,8 @@ ssid_error=[]
             console.log(ssid.id+' already UP ')
             //console.log(up_new.length,down_new.length)
             if (up_new.length === 0 && down_new.length === 0) {
-            $('#Run').css('display','block');
-            $('#timer,#time_label,#timercheckbox,#errors').css('display','none');
+            //$('#Run').css('display','block');
+            $('#timer,#time_label,#timercheckbox,#errors,#Run').css('display','none');
      }
         }
 }
