--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -5,6 +5,7 @@
     <title>SSID SWITCHER</title>
     <meta charset="utf-8">
     <link href="{% static 'stylesheet.css' %}" rel="stylesheet" type="text/css" >
+    <link href="{% static 'css/foundation.css' %}" rel="stylesheet" type="text/css" >
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
     <meta http-equiv="refresh" content="120">
 <style>
@@ -54,6 +55,18 @@ ul.inside {
 </head>
 
 <body>
+<!--Login part-->
+<div class="top-bar">
+    <section class="top-bar-section">
+    <ul class="right">
+    {% if username %}
+    <li><a href="/auth/logout/">Выйти ({{ username }})</a></li>
+    {% else %}
+    <li><a href="/auth/login/">Войти</a></li>
+    {% endif %}
+    </ul>
+    </section>
+</div>
 <!--Header part-->
 <div class="big">
 <h2 style="color:dimgrey">Select server...</h2>
