--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -8,56 +8,12 @@
     <link href="{% static 'css/foundation.css' %}" rel="stylesheet" type="text/css" >
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
     <meta http-equiv="refresh" content="120">
-<style>
-    body {
-        text-align: center;
-    }
-button.accordion {
-    background-color: #eee;
-    border-bottom: 1px solid darkgrey;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 220px;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-    border-radius: 15px;
-    margin-bottom: 5px;
-}
-
-button.accordion.active, button.accordion:hover {
-    background-color: #ddd;
-}
-
-.panel {
-    background-color: white;
-    display: inline-block;}
-
-ul.inside {
-    display: none;
-    list-style-type: none;
-    padding-left: 40px;
-    text-align: left;
-}
-
-.big {
-    width: 690px;
-    margin-left: auto;
-    margin-right: auto;  }
-
-.footer {
-    margin: 0 auto;
-    width:170px;
-    }
-
-</style>
 </head>
 
 <body>
 <!--Login part-->
 <div class="top-bar">
-    <section class="top-bar-section">
+    <section class="media-object-section">
     <ul class="right">
     {% if username %}
     <li><a href="/auth/logout/">Выйти ({{ username }})</a></li>
