--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -14,7 +14,7 @@
 <!--Login part-->
 <div class="top-bar">
     <section class="media-object-section">
-    <ul class="float-right">
+    <ul class="media-right">
     {% if username %}
     <li><a href="/auth/logout/">Выйти ({{ username }})</a></li>
     {% else %}
