--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -16,9 +16,9 @@
     <section class="media-object-section">
     <ul class="position-right">
     {% if username %}
-    <li><a href="/auth/logout/">Выйти ({{ username }})</a></li>
+    <li><a href="/admin/logout/">Выйти ({{ username }})</a></li>
     {% else %}
-    <li><a href="/auth/login/">Войти</a></li>
+    <li><a href="/admin/login/">Войти</a></li>
     {% endif %}
     </ul>
     </section>
