--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link href="{% static 'stylesheet.css' %}" rel="stylesheet" type="text/css" >
   <!--  <link href="{% static 'css/foundation.css' %}" rel="stylesheet" type="text/css" > -->
+    <!--  <link href="{% static 'css/foundation.css' %}" rel="stylesheet" type="text/css" > -->
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
     <meta http-equiv="refresh" content="120">
 </head>
