--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -24,7 +24,7 @@
 </div>
 <!--Header part-->
 <div class="big">
-<h2 style="color:dimgrey">Select server...</h2>
+<p class="pulsate">Select server...</p>
 
 {% for k,i in servers %}
  <div class="panel">
