--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -13,7 +13,7 @@
 <!--Login part-->
 <div class="top-bar">
     <section class="media-object-section">
-    <ul class="position-right">
+    <ul class="ul-auth">
     {% if username %}
     <li><a href="/auth/logout/">Выйти ({{ username }})</a></li>
     {% else %}
