--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -22,6 +22,8 @@
     </ul>
     </section>
 </div>
+
+{% block login %}{% endblock %}
 <!--Header part-->
 <div class="big">
 <p class="pulsate">Select server...</p>
