--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -26,7 +26,7 @@
 <!--Header part-->
 <div class="big">
 <p class="pulsate">Select server...</p>
-test test test
+test test test {{ servers }}
 {% for k,i in servers %}
  <div class="panel">
        <button class="accordion">{{ i }}</button>
