--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -15,7 +15,7 @@
     <section class="media-object-section">
     <ul class="ul-auth">
     {% if username %}
-    <li><a id="logout" href="/auth/logout/" onClick="Logout()">Выйти ({{ username }})</a></li>
+    <li><a id="logout" href="/auth/logout/">Выйти ({{ username }})</a></li>
     </ul>
     {% else %}
     <div class="inline login">
@@ -23,9 +23,10 @@
            <a href="/auth/profile">Профиль ({{ username }})</a>
            <a href="/auth/logout/">Выйти</a>
        {% else %}
-       <form style="display:inline-block;" action="/auth/login/" >
+       <form id="signin" style="display:inline-block;" action="/auth/login/" >
          <input type="text" name="username" id="username" placeholder="Логин">
          <input type="password" name="password" id="password" placeholder="Пароль">
+          {% csrf_token %}
          {% if login_error %}
          <label class="error">{{login_error}}</label>
          {% endif %}
@@ -194,15 +195,16 @@ ssid_error=[]
   //set= new Set(ip)
   //console.log("New Down: "+down_new+" New Up: "+up_new);
   }
-
+/*
 //Login
 	 $("#login").click(function() {
          username = $("#username").val();
          password = $("#password").val();
+         csrf = {% csrf_token %}
          $.ajax({
              type: "POST",
              url: "/auth/login/",
-             data : { username : JSON.stringify(username), password:JSON.stringify(password),CSRF: {% csrf_token %}},
+             data : { username : JSON.stringify(username), password:JSON.stringify(password),CSRF:csrf },
              success: function (html) {
                  window.location = "index.html"
              },
@@ -214,6 +216,7 @@ ssid_error=[]
 
          });
      })
+*/
 
 //send data to backend
 function run() {
