--- a/ssidswitcher1/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/ssidswitcher1/static/stylesheet.css
@@ -101,12 +101,26 @@ width:100px;
 
 }
 input[type=submit] {
+    background-color: #eee;
+    border-bottom: 1px solid darkgrey;
+    color: #444;
+    cursor: pointer;
+    padding: 2px;
+    width: 80px;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
     border-radius: 15px;
-    border-color: darkgreen;
-    background-color: rgba(50, 200, 0, 0.7);
+
+}
+
+input[type=submit].active, input[type=submit]:hover {
+    background-color: #ddd;
 }
 
 .login {
  float:right;
  margin-right:10px;
 }
+
+
