--- a/ssidswitcher1/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/ssidswitcher1/static/stylesheet.css
@@ -32,8 +32,8 @@ ul.inside {
 
 .big {
     width: 690px;
-    margin-left: auto;
-    margin-right: auto;  }
+    margin: auto;
+ }
 
 .footer {
     margin: 0 auto;
