--- a/ssidswitcher1/ssidswitcher1/static/bred.css
+++ b/ssidswitcher1/ssidswitcher1/static/bred.css
@@ -18,7 +18,6 @@ body {
     left:0;
     right:0;
     width: 100%;
-    background-color: rgba(50, 200, 0, 0.7);
 
 }
 
@@ -54,6 +53,7 @@ float:left;
     padding:5px 8px;
     border-radius: 15px;
     background-color: white;
+    border:1px solid darkgray;
 }
 
 
@@ -67,8 +67,7 @@ width:100px;
 }
 input[type=submit] {
     border-radius: 15px;
-    border-color: darkgreen;
-    background-color: rgba(50, 200, 0, 0.7);
+    color:red;
 }
 input[type=file] {
     cursor: pointer;
@@ -83,7 +82,6 @@ input[type=file] {
   width: 100%;
   height:3%;
   text-align: center;
-  background: rgba(50, 200, 0, 0.7);
   left:0;
 }
 
