--- a/ssidswitcher1/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/ssidswitcher1/static/stylesheet.css
@@ -32,7 +32,9 @@ ul.inside {
 
 .big {
     width: 690px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:100px;
  }
 
 .footer {
