--- a/ssidswitcher1/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/ssidswitcher1/static/stylesheet.css
@@ -34,7 +34,6 @@ ul.inside {
     width: 690px;
     margin-left: auto;
     margin-right: auto;
-    margin-top:100px;
  }
 
 .footer {
@@ -76,6 +75,19 @@ ul.inside {
     100% {
         opacity: 0.5;
     }
+}
+
+
+.login_form {
+    display:inline-block;
+    border:1px solid darkgrey;
+    margin-top:5px;
+    margin-bottom:5px;
+    padding:5px 8px;
+    border-radius: 15px;
+    background-color: white;
+    float:right;
+    margin-right:10px;
 }
 
 /*
