--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -14,12 +14,12 @@
 <!--Login part-->
  <body>
  <div id="header">
-  <div class="inline login">
+  <div class="login_form">
        {% if username %}
            <a href="/auth/profile">Профиль ({{ username }})</a>
            <a href="/auth/logout/">Выйти</a>
        {% else %}
-       <form class="login_form" action="/auth/login/" method="POST">
+       <form action="/auth/login/" method="POST">
           {% csrf_token %}
          <input type="text" name="username" id="username" placeholder="Логин">
          <input type="password" name="password" id="password" placeholder="Пароль">
