--- a/ssidswitcher1/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/ssidswitcher1/static/stylesheet.css
@@ -87,6 +87,11 @@ ul.inside {
     margin-right:10px;
 }
 
+
+.logout_btn {
+    color:red;
+    font-weight: bold;
+}
 /*
 .inline {
     display: inline-block;
