--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -16,7 +16,7 @@
  <div id="header">
   <div class="login_form">
        {% if username %}
-           <a href="/auth/profile" style="color: red">Профиль ({{ username }})</a>
+           <a href="/auth/profile" style="color: black">Профиль ({{ username }})</a>
            <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button">Выйти</button>
           <!-- <a href="/auth/logout/">Выйти</a> -->
        {% else %}
